Atualizações Ivan: Modificações no DataLoader, Mudança de Imagen do Index - Página Produtos Atualizada - LP Necessaire modificada - LP Caneca Modificada

--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -126,12 +126,12 @@ products.category.pouches.title=Necessaires Personalizadas
 products.category.pouches.description=Nossas necessaires s\u00e3o pr\u00e1ticas, estilosas e totalmente personaliz\u00e1veis. Dispon\u00edveis em diferentes tamanhos e materiais, s\u00e3o perfeitas para organizar seus itens essenciais ou para presentear algu\u00e9m especial.
 
 # Categoria Mochilas
-products.category.backpacks.title=Mochilas Personalizadas
-products.category.backpacks.description=Nossas mochilas personalizadas combinam funcionalidade e estilo para o dia a dia. Com v\u00e1rios tamanhos e modelos, s\u00e3o ideais para escola, trabalho ou viagens, e podem ser customizadas com nomes, estampas ou designs exclusivos.
+products.category.backpacks.title=Mochilas e Lancheiras Personalizadas
+products.category.backpacks.description=Nossas mochilas e lancheiras infantis são perfeitas para o dia a dia das crianças. Com temas divertidos como unicórnios, dinossauros, animais ou qualquer outro tema que você imaginar, cada peça é feita com materiais resistentes e seguros. As mochilas são ideais para a escola, enquanto as lancheiras mantêm o lanche organizado e fresco.
 
 # Categoria Bolsas
 products.category.bags.title=Bolsas Personalizadas
-products.category.bags.description=Nossas bolsas personalizadas unem praticidade, eleg\u00e2ncia e exclusividade para acompanhar voc\u00ea em qualquer ocasi\u00e3o. Dispon\u00edveis em diversos modelos, tamanhos e materiais, s\u00e3o ideais para o dia a dia, trabalho, viagens ou para presentear algu\u00e9m especial. Personalize com nomes, iniciais, estampas ou frases e torne sua bolsa \u00fanica, do seu jeito.
+products.category.bags.description=Nossas bolsas personalizadas unem praticidade, eleg\u00e2ncia e exclusividade para acompanhar voc\u00ea em qualquer ocasi\u00e3o. Dispon\u00edveis em diversos modelos, tamanhos e materiais, s\u00e3o ideais para o dia a dia, trabalho, viagens ou para presentear algu\u00e9m especial. Personalize do seu jeito e torne sua bolsa \u00fanica!
 
 # ... (chaves existentes)
 
@@ -143,7 +143,7 @@ products.category.cases.description=Nossos estojos personalizados s\u00e3o perfe
 
 # Categoria Linha Baby
 products.category.baby.title=Linha Baby
-products.category.baby.description=Nossa linha baby traz produtos delicados e seguros para os pequenos. Com op\u00e7\u00f5es como toalhas personalizadas, roupinhas, acess\u00f3rios e lembrancinhas para ch\u00e1 de beb\u00ea, cada item pode ser customizado com o nome do beb\u00ea ou tema escolhido pelos pais.
+products.category.baby.description=Nossa linha baby traz produtos delicados e seguros para deixar a vida dos pais mais fácil. Com op\u00e7\u00f5es como toalhas personalizadas, farmacinha, carteira pediátrica e muito mais! Cada item pode ser customizado com o nome do bebê ou tema escolhido pelos pais.
 
 # ... (chaves existentes)
 
@@ -155,13 +155,13 @@ products.faq.a1=O prazo m\u00e9dio \u00e9 de 7 a 10 dias \u00fateis, dependendo 
 products.faq.q2=Posso solicitar amostras antes de fazer um pedido grande?
 products.faq.a2=Sim, oferecemos a possibilidade de amostra paga para pedidos corporativos ou grandes eventos. O valor da amostra \u00e9 deduzido do pedido final quando confirmado.
 products.faq.q3=Quais m\u00e9todos de personaliza\u00e7\u00e3o voc\u00eas utilizam?
-products.faq.a3=Utilizamos diversos m\u00e9todos, conforme o material e o produto: impress\u00e3o digital, sublima\u00e7\u00e3o, bordado, grava\u00e7\u00e3o a laser, transfer, serigrafia e pintura manual.
+products.faq.a3=Utilizamos diversos m\u00e9todos, conforme o material e o produto: impress\u00e3o digital, sublima\u00e7\u00e3o, bordado, transfer e serigrafia.
 products.faq.q4=Qual a quantidade m\u00ednima para pedidos?
-products.faq.a4=Aceitamos pedidos a partir de 1 unidade para clientes individuais. Para pedidos corporativos ou eventos, temos condi\u00e7\u00f5es especiais a partir de 20 unidades.
+products.faq.a4=Aceitamos pedidos a partir de 1 unidade para qualquer cliente!
 products.faq.q5=Como funciona o envio dos produtos?
 products.faq.a5=Trabalhamos com envios para todo Brasil atrav\u00e9s de Correios e transportadoras. O prazo e valor do frete ser\u00e3o calculados no momento da compra, com base no seu CEP e peso do pedido.
 products.faq.q6=Posso acompanhar a produ\u00e7\u00e3o do meu pedido?
-products.faq.a6=Sim, mantemos nossos clientes informados sobre cada etapa do processo de produ\u00e7\u00e3o. Voc\u00ea receber\u00e1 atualiza\u00e7\u00f5es por e-mail e poder\u00e1 entrar em contato conosco para mais informa\u00e7\u00f5es a qualquer momento.
+products.faq.a6=Sim, mantemos nossos clientes informados sobre cada etapa do processo de produ\u00e7\u00e3o. Voc\u00ea receber\u00e1 atualiza\u00e7\u00f5es por whatsapp ou email e poder\u00e1 entrar em contato conosco para mais informa\u00e7\u00f5es a qualquer momento.
 
 # Prefixo do T\u00edtulo da P\u00e1gina
 page.title.prefix=Tatiart -
@@ -194,8 +194,8 @@ category.why.subtitle.suffix=que n\u00e3o apenas organizam, mas contam sua hist\
 
 category.why.feature1.title=Design que Inspira
 category.why.feature1.description.prefix=<strong>Cada
-category.why.feature1.description.middle=\u00e9 uma obra de arte personalizada.</strong>
-category.why.feature1.description.suffix=Nossa equipe de designers trabalha com paix\u00e3o para transformar suas ideias em pe\u00e7as que inspiram sua rotina di\u00e1ria.
+category.why.feature1.description.middle=é uma obra de arte personalizada.</strong>
+category.why.feature1.description.suffix=Nós trabalhamos com paixão para transformar suas ideias em peças que inspiram sua rotina diária.
 
 category.why.feature2.title=Qualidade Premium
 category.why.feature2.description.prefix=<strong>Materiais de primeira linha e acabamento impec\u00e1vel.</strong> Suas
@@ -242,17 +242,17 @@ category.imagination.overlay=\u2728 100% \u00danica
 # Categoria - Se\u00e7\u00e3o Como Funciona
 category.howitworks.badge=Como Funciona
 category.howitworks.title=Do Sonho \u00e0 Realidade em 4 Passos
-category.howitworks.subtitle.prefix=Nosso processo \u00e9 simples, mas cada etapa \u00e9 cuidadosamente pensada para garantir que sua
-category.howitworks.subtitle.suffix=seja perfeita para sua rotina.
+category.howitworks.subtitle.prefix=Nosso processo \u00e9 simples e próximo, mas cada etapa \u00e9 cuidadosamente pensada para garantir que sua
+category.howitworks.subtitle.suffix=seja perfeita e única para sua rotina.
 category.howitworks.step1.title=Conte Sua Hist\u00f3ria
-category.howitworks.step1.description=Compartilhe conosco suas paix\u00f5es, sua rotina, fotos dos seus pets, profiss\u00e3o ou qualquer inspira\u00e7\u00e3o que voc\u00ea tenha.
+category.howitworks.step1.description=Compartilhe comigo suas paix\u00f5es, sua rotina, fotos dos seus pets, profiss\u00e3o ou qualquer inspira\u00e7\u00e3o que voc\u00ea tenha.
 category.howitworks.step2.title=Criamos o Design
-category.howitworks.step2.description=Nossa equipe de designers cria um projeto exclusivo baseado na sua personalidade. Voc\u00ea aprova antes da produ\u00e7\u00e3o.
+category.howitworks.step2.description=Nós vamos criar um projeto exclusivo baseado nas suas ideias e personalidade! Voc\u00ea aprova antes da produ\u00e7\u00e3o.
 category.howitworks.step3.title=Produ\u00e7\u00e3o Premium
 category.howitworks.step3.description.prefix=Sua
-category.howitworks.step3.description.suffix=\u00e9 produzida com materiais de alta qualidade e t\u00e9cnicas especiais para garantir durabilidade e beleza.
+category.howitworks.step3.description.suffix=\u00e9 produzida com materiais de alta qualidade e t\u00e9cnicas especiais para garantir durabilidade e beleza. Além de muito amor!
 category.howitworks.step4.title=Entrega Especial
-category.howitworks.step4.description=Embalamos com carinho e enviamos para voc\u00ea. Sua nova companheira de organiza\u00e7\u00e3o chegar\u00e1 em casa!
+category.howitworks.step4.description=Embalamos com carinho e enviamos para voc\u00ea. Seu produto único e personalizado chegará em casa!
 category.howitworks.button.prefix=Come\u00e7ar Minha
 category.howitworks.button.suffix=Agora
 
