--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -126,25 +126,20 @@ products.category.pouches.title=Custom Pouches
 products.category.pouches.description=Our pouches are practical, stylish, and fully customizable. Available in different sizes and materials, they are perfect for organizing your essentials or for gifting someone special.
 
 # Backpacks Category
-products.category.backpacks.title=Custom Backpacks
-products.category.backpacks.description=Our custom backpacks combine functionality and style for everyday use. With various sizes and models, they are ideal for school, work, or travel, and can be customized with names, patterns, or exclusive designs.
+products.category.backpacks.title=Kids Backpacks & Lunch Boxes
+products.category.backpacks.description=Our kids backpacks and lunch boxes are perfect for children's daily activities. With enchanting themes like unicorns, dinosaurs, animals, or any theme you can imagine, each piece is made with durable and safe materials. The backpacks are ideal for school, with organized compartments and comfortable straps, while the lunch boxes keep snacks organized and fresh. All can be personalized with the child's name, making them unique and easy to identify.
 
 # Bags Category
 products.category.bags.title=Custom Bags
-products.category.bags.description=Our custom bags unite practicality, elegance, and exclusivity to accompany you on any occasion. Available in various models, sizes, and materials, they are ideal for daily use, work, travel, or for gifting someone special. Personalize with names, initials, patterns, or phrases and make your bag unique, your way.
-# ... (existing keys)
+products.category.bags.description=Our custom bags combine practicality, elegance, and exclusivity to accompany you on any occasion. Available in various models, they are perfect for expressing your unique style.
 
 # Pencil Cases Category
 products.category.cases.title=Custom Pencil Cases
 products.category.cases.description=Our custom pencil cases are perfect for organizing school or office supplies. With different sizes and compartments, they can be personalized with names, favorite characters, or exclusive designs.
 
-# ... (existing keys)
-
 # Baby Line Category
 products.category.baby.title=Baby Line
 products.category.baby.description=Our baby line offers delicate and safe products for the little ones. With options like personalized towels, clothes, accessories, and baby shower favors, each item can be customized with the baby's name or a theme chosen by the parents.
-
-# ... (existing keys)
 
 # FAQ Section - Products Page
 products.faq.title=Frequently Asked Questions
@@ -154,26 +149,22 @@ products.faq.a1=The average time is 7 to 10 business days, depending on the prod
 products.faq.q2=Can I request samples before placing a large order?
 products.faq.a2=Yes, we offer the option of a paid sample for corporate orders or large events. The sample's value is deducted from the final order upon confirmation.
 products.faq.q3=What customization methods do you use?
-products.faq.a3=We use various methods, depending on the material and product: digital printing, sublimation, embroidery, laser engraving, transfer, screen printing, and manual painting.
+products.faq.a3=We use various methods, depending on the material and product: digital printing, sublimation, embroidery, transfer, and screen printing.
 products.faq.q4=What is the minimum order quantity?
-products.faq.a4=We accept orders starting from 1 unit for individual customers. For corporate orders or events, we have special conditions for orders of 20 units or more.
+products.faq.a4=We accept orders starting from 1 unit for any customer!
 products.faq.q5=How does product shipping work?
 products.faq.a5=We ship throughout Brazil via Correios and carriers. The delivery time and shipping cost will be calculated at the time of purchase, based on your ZIP code and the order's weight.
 products.faq.q6=Can I track the production of my order?
-products.faq.a6=Yes, we keep our clients informed about each stage of the production process. You will receive updates by email and can contact us for more information at any time.
+products.faq.a6=Yes, we keep our clients informed about each stage of the production process. You will receive updates by WhatsApp or email and can contact us for more information at any time.
 
 # Page Title Prefix
 page.title.prefix=Tatiart -
-
-# ... (existing keys)
 
 # Category Hero
 category.hero.organize=that Organize
 category.hero.withStyle=Your Life with Style
 category.hero.whatsappBtn=Chat on WhatsApp
 category.hero.deliveryInfo=\u2728 <strong>Delivery in 3-7 days \u2022 Premium quality</strong> \u2728
-
-# ... (existing keys)
 
 # Category - Gallery Section
 category.gallery.badge=\u2728 Our Work
@@ -182,8 +173,6 @@ category.gallery.title.suffix=Tells Your Story
 category.gallery.subtitle.prefix=See how we transform simple ideas into
 category.gallery.subtitle.suffix=that <strong>organize with love</strong>. Every detail is designed to ease your routine and express who you are.
 category.gallery.noproducts=No products found in this category yet. Check back soon!
-
-# ... (existing keys)
 
 # Category - "Why Choose Us" Section
 category.why.badge=\ud83d\udc8e Why Choose Tatiart
@@ -194,7 +183,7 @@ category.why.subtitle.suffix=that not only organize but also tell your story and
 category.why.feature1.title=Inspiring Design
 category.why.feature1.description.prefix=<strong>Each
 category.why.feature1.description.middle=is a personalized work of art.</strong>
-category.why.feature1.description.suffix=Our design team works with passion to turn your ideas into pieces that inspire your daily routine.
+category.why.feature1.description.suffix=We work with passion to turn your ideas into pieces that inspire your daily routine.
 
 category.why.feature2.title=Premium Quality
 category.why.feature2.description.prefix=<strong>Top-tier materials and flawless finishing.</strong> Your
@@ -208,15 +197,11 @@ category.why.feature4.title=Made with Love
 category.why.feature4.description.prefix=<strong>Each piece is treated as if it were for our own family.</strong>
 category.why.feature4.description.suffix=We take care of all the details so you receive something truly special.
 
-# ... (existing keys)
-
 # Category - Testimonials Section
 category.testimonials.badge=Real Testimonials
 category.testimonials.title=Passionate Women Share
 category.testimonials.subtitle=See the real photos and messages we receive every day. Every smile is a routine transformed with love and organization.
 category.testimonials.notestimonials=We don't have any testimonials for this category yet. Be the first!
-
-# ... (existing keys)
 
 # Category - Imagination Section
 category.imagination.badge=100% Custom
@@ -236,26 +221,22 @@ category.imagination.feature4.description=Our team works with you to understand 
 category.imagination.feature4.description2=. <strong>You participate in the entire process.</strong>
 category.imagination.overlay=\u2728 100% Unique
 
-# ... (existing keys)
-
 # Category - How it Works Section
 category.howitworks.badge=How It Works
 category.howitworks.title=From Dream to Reality in 4 Steps
-category.howitworks.subtitle.prefix=Our process is simple, but each step is carefully designed to ensure your
-category.howitworks.subtitle.suffix=is perfect for your routine.
-category.howitworks.step1.title=Tell Your Story
-category.howitworks.step1.description=Share with us your passions, your routine, photos of your pets, your profession, or any inspiration you have.
+category.howitworks.subtitle.prefix=Our process is simple and personal, but each step is carefully thought out to ensure your
+category.howitworks.subtitle.suffix=is perfect and unique for your routine.
+category.howitworks.step1.title=Share Your Story
+category.howitworks.step1.description=Share with me your passions, your routine, photos of your pets, profession, or any inspiration you have.
 category.howitworks.step2.title=We Create the Design
-category.howitworks.step2.description=Our design team creates an exclusive project based on your personality. You approve it before production.
+category.howitworks.step2.description=We will create an exclusive design based on your ideas and personality! You approve it before production.
 category.howitworks.step3.title=Premium Production
 category.howitworks.step3.description.prefix=Your
-category.howitworks.step3.description.suffix=is produced with high-quality materials and special techniques to ensure durability and beauty.
+category.howitworks.step3.description.suffix=is produced with high-quality materials and special techniques to ensure durability and beauty. Plus lots of love!
 category.howitworks.step4.title=Special Delivery
-category.howitworks.step4.description=We pack it with care and ship it to you. Your new organizational companion will arrive at your home!
+category.howitworks.step4.description=We pack with care and ship to you. Your unique and personalized product will arrive at your home!
 category.howitworks.button.prefix=Start My
 category.howitworks.button.suffix=Now
-
-# ... (existing keys)
 
 # Category - Customization Types Section
 category.types.badge=Customization Types
@@ -264,27 +245,19 @@ category.types.subtitle=No matter your passion or need, we make it a reality. Se
 category.types.notfound=<strong>Didn't find your idea here?</strong> Don't worry! We create any type of customization.
 category.types.button=Talk About My Idea
 
-# ... (existing keys)
-
 # Category - Final CTA Section
 category.finalcta.whatsappBtn=Chat on WhatsApp
 category.finalcta.info1=<strong>Fast delivery</strong> in 3-7 days
 category.finalcta.info2=<strong>Quality</strong> 100% guaranteed
 category.finalcta.info3=<strong>Exclusive</strong> design
 
-# ... (existing keys)
-
 # About Page Title
 page.title.about=Tatiart - About Me
-
-# ... (existing keys)
 
 # About Page - Hero Section
 about.hero.name=Tati Arantes
 about.hero.tagline=Transforming lives through art and custom crafts
 about.hero.button=See My Work
-
-# ... (existing keys)
 
 # About Page - My Story Section
 about.story.title=My Story
@@ -293,8 +266,6 @@ about.story.video.title=Get to know Tati's story
 about.story.video.caption=Discover how I turned my passion for crafts into a business that touches people's hearts.
 about.story.quote="Each piece I create carries a bit of my story and a lot of love. My purpose is to turn special moments into tangible memories that will last forever."
 about.story.quote.author=\u2014 Tati Arantes
-
-# ... (existing keys)
 
 # About Page - Gallery Section
 about.gallery.title=Gallery of Creations
