Arruamdo os textos do Banner e da Galeria de Produtos das Landing Pages

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -189,9 +189,9 @@ category.why.feature2.title=Premium Quality
 category.why.feature2.description.prefix=<strong>Top-tier materials and flawless finishing.</strong> Your
 category.why.feature2.description.suffix=will withstand daily use, maintaining their beauty and functionality for years.
 
-category.why.feature3.title=Smart Organization
-category.why.feature3.description.prefix=<strong>Compartments designed for your routine.</strong> Each
-category.why.feature3.description.suffix=is designed to maximize space and facilitate access to your essential items.
+category.why.feature3.title=Personalized Support
+category.why.feature3.description.prefix=<strong>You are part of the creative process.</strong> We guide you through every step, ensuring that your
+category.why.feature3.description.suffix=is exactly what you dreamed of.
 
 category.why.feature4.title=Made with Love
 category.why.feature4.description.prefix=<strong>Each piece is treated as if it were for our own family.</strong>
