--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -199,14 +199,14 @@ category.why.feature1.description.suffix=Nós trabalhamos com paixão para trans
 
 category.why.feature2.title=Qualidade Premium
 category.why.feature2.description.prefix=<strong>Materiais de primeira linha e acabamento impec\u00e1vel.</strong> Suas
-category.why.feature2.description.suffix=v\u00e3o resistir ao uso di\u00e1rio mantendo a beleza e funcionalidade por anos.
+category.why.feature2.description.suffix=vão resistir ao uso diário mantendo a beleza e funcionalidade por anos.
 
-category.why.feature3.title=Organiza\u00e7\u00e3o Inteligente
-category.why.feature3.description.prefix=<strong>Compartimentos pensados para sua rotina.</strong> Cada
-category.why.feature3.description.suffix=\u00e9 projetada para maximizar o espa\u00e7o e facilitar o acesso aos seus itens essenciais.
+category.why.feature3.title=Atendimento que Acolhe
+category.why.feature3.description.prefix=<strong>Você é parte do processo criativo.</strong> Acompanhamos você em cada etapa, garantindo que sua
+category.why.feature3.description.suffix=seja exatamente o que você sonhou.
 
 category.why.feature4.title=Feito com Amor
-category.why.feature4.description.prefix=<strong>Cada pe\u00e7a \u00e9 tratada como se fosse para nossa fam\u00edlia.</strong>
+category.why.feature4.description.prefix=<strong>Cada peça é tratada como se fosse para nossa família.</strong>
 category.why.feature4.description.suffix=Cuidamos de todos os detalhes para que voc\u00ea receba algo verdadeiramente especial.
 
 # ... (chaves existentes)
@@ -245,7 +245,7 @@ category.howitworks.title=Do Sonho \u00e0 Realidade em 4 Passos
 category.howitworks.subtitle.prefix=Nosso processo \u00e9 simples e próximo, mas cada etapa \u00e9 cuidadosamente pensada para garantir que sua
 category.howitworks.subtitle.suffix=seja perfeita e única para sua rotina.
 category.howitworks.step1.title=Conte Sua Hist\u00f3ria
-category.howitworks.step1.description=Compartilhe comigo suas paix\u00f5es, sua rotina, fotos dos seus pets, profiss\u00e3o ou qualquer inspira\u00e7\u00e3o que voc\u00ea tenha.
+category.howitworks.step1.description=Compartilhe comigo suas paix\u00f5es, sua rotina, pets, profiss\u00e3o ou qualquer inspira\u00e7\u00e3o que voc\u00ea tenha.
 category.howitworks.step2.title=Criamos o Design
 category.howitworks.step2.description=Nós vamos criar um projeto exclusivo baseado nas suas ideias e personalidade! Voc\u00ea aprova antes da produ\u00e7\u00e3o.
 category.howitworks.step3.title=Produ\u00e7\u00e3o Premium
