Tati Colbert, não tati arantes

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -255,7 +255,7 @@ category.finalcta.info3=<strong>Exclusive</strong> design
 page.title.about=Tatiart - About Me
 
 # About Page - Hero Section
-about.hero.name=Tati Arantes
+about.hero.name=Tati Colbert
 about.hero.tagline=Transforming lives through art and custom crafts
 about.hero.button=See My Work
 
@@ -265,7 +265,7 @@ about.story.subtitle=Learn a little more about my journey, my passion for crafts
 about.story.video.title=Get to know Tati's story
 about.story.video.caption=Discover how I turned my passion for crafts into a business that touches people's hearts.
 about.story.quote="Each piece I create carries a bit of my story and a lot of love. My purpose is to turn special moments into tangible memories that will last forever."
-about.story.quote.author=\u2014 Tati Arantes
+about.story.quote.author=\u2014 Tati Colbert
 
 # About Page - Gallery Section
 about.gallery.title=Gallery of Creations
