--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -281,7 +281,7 @@ page.title.about=Tatiart - Sobre Mim
 # ... (chaves existentes)
 
 # P\u00e1gina Sobre - Se\u00e7\u00e3o Hero
-about.hero.name=Tati Arantes
+about.hero.name=Tati Colbert
 about.hero.tagline=Transformando vidas atrav\u00e9s da arte e do artesanato personalizado
 about.hero.button=Ver Trabalhos
 
@@ -293,7 +293,7 @@ about.story.subtitle=Conhe\u00e7a um pouco mais sobre minha trajet\u00f3ria, pai
 about.story.video.title=Conhe\u00e7a a hist\u00f3ria da Tati
 about.story.video.caption=Descubra como transformei minha paix\u00e3o por artesanato em um neg\u00f3cio que toca o cora\u00e7\u00e3o das pessoas.
 about.story.quote="Cada pe\u00e7a que crio carrega um pouco da minha hist\u00f3ria e muito amor. Meu prop\u00f3sito \u00e9 transformar momentos especiais em mem\u00f3rias tang\u00edveis que durar\u00e3o para sempre."
-about.story.quote.author=\u2014 Tati Arantes
+about.story.quote.author=\u2014 Tati Colbert
 
 # ... (chaves existentes)
 
