--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ index.testimonial1.product=Custom Mug
 index.testimonial1.text=The custom mug I bought was the perfect gift! The finish is excellent, and the delivery was fast. I will definitely buy again.
 index.testimonial2.author=Carlos Oliveira
 index.testimonial2.product=Embroidered Pouch
-index.testimonial2.text=I ordered a pouch with my wife's name embroidered on it, and she loved it! The material is high quality, and the embroidery was flawless.
+index.testimonial2.text=I ordered a pouch with my wife's name printed on it, and she loved it! The material is high quality, and the printing was flawless.
 index.testimonial3.author=Ana Souza
 index.testimonial3.product=Custom Backpack
 index.testimonial3.text=I bought a custom backpack for my daughter, and it exceeded my expectations. The material is durable, and the colors remained vibrant even after several washes.
