alteração nos en/pt properties

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -73,7 +73,7 @@ index.testimonial1.product=Custom Mug
 index.testimonial1.text=The custom mug I bought was the perfect gift! The finish is excellent, and the delivery was fast. I will definitely buy again.
 index.testimonial2.author=Carlos Oliveira
 index.testimonial2.product=Embroidered Pouch
-index.testimonial2.text=I ordered a pouch with my wife's name embroidered on it, and she loved it! The material is high quality, and the embroidery was flawless.
+index.testimonial2.text=I ordered a pouch with my wife's name embroidered on it, and she loved it! The material is high quality, and the patterned was flawless.
 index.testimonial3.author=Ana Souza
 index.testimonial3.product=Custom Backpack
 index.testimonial3.text=I bought a custom backpack for my daughter, and it exceeded my expectations. The material is durable, and the colors remained vibrant even after several washes.
@@ -149,7 +149,7 @@ products.faq.a1=The average time is 7 to 10 business days, depending on the prod
 products.faq.q2=Can I request samples before placing a large order?
 products.faq.a2=Yes, we offer the option of a paid sample for corporate orders or large events. The sample's value is deducted from the final order upon confirmation.
 products.faq.q3=What customization methods do you use?
-products.faq.a3=We use various methods, depending on the material and product: digital printing, sublimation, embroidery, transfer, and screen printing.
+products.faq.a3=We use various methods, depending on the material and product: digital printing, sublimation, patterned, transfer, and screen printing.
 products.faq.q4=What is the minimum order quantity?
 products.faq.a4=We accept orders starting from 1 unit for any customer!
 products.faq.q5=How does product shipping work?
