--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -32,7 +32,7 @@ index.testimonial1.product=Caneca Personalizada
 index.testimonial1.text=A caneca personalizada que comprei foi perfeita como presente! O acabamento \u00e9 excelente e a entrega foi r\u00e1pida. Com certeza comprarei novamente.
 index.testimonial2.author=Carlos Oliveira
 index.testimonial2.product=Necessaire Bordada
-index.testimonial2.text=Encomendei uma necessaire com o nome da minha esposa estampado e ela amou! O material \u00e9 de \u00f3tima qualidade e o bordado ficou impec\u00e1vel.
+index.testimonial2.text=Encomendei uma necessaire com o nome da minha esposa estampado e ela amou! O material \u00e9 de \u00f3tima qualidade e o estampado ficou impec\u00e1vel.
 index.testimonial3.author=Ana Souza
 index.testimonial3.product=Mochila Personalizada
 index.testimonial3.text=Comprei uma mochila personalizada para minha filha e superou minhas expectativas. O material \u00e9 resistente e as cores ficaram vibrantes mesmo ap\u00f3s v\u00e1rias lavagens.
@@ -74,7 +74,7 @@ index.testimonial1.product=Caneca Personalizada
 index.testimonial1.text=A caneca personalizada que comprei foi perfeita como presente! O acabamento \u00e9 excelente e a entrega foi r\u00e1pida. Com certeza comprarei novamente.
 index.testimonial2.author=Carlos Oliveira
 index.testimonial2.product=Necessaire Bordada
-index.testimonial2.text=Encomendei uma necessaire com o nome da minha esposa bordado e ela amou! O material \u00e9 de \u00f3tima qualidade e o bordado ficou impec\u00e1vel.
+index.testimonial2.text=Encomendei uma necessaire com o nome da minha esposa estampado e ela amou! O material \u00e9 de \u00f3tima qualidade e o estampado ficou impec\u00e1vel.
 index.testimonial3.author=Ana Souza
 index.testimonial3.product=Mochila Personalizada
 index.testimonial3.text=Comprei uma mochila personalizada para minha filha e superou minhas expectativas. O material \u00e9 resistente e as cores ficaram vibrantes mesmo ap\u00f3s v\u00e1rias lavagens.
@@ -127,7 +127,7 @@ products.category.pouches.description=Nossas necessaires s\u00e3o pr\u00e1ticas,
 
 # Categoria Mochilas
 products.category.backpacks.title=Mochilas e Lancheiras Personalizadas
-products.category.backpacks.description=Nossas mochilas e lancheiras infantis são perfeitas para o dia a dia das crianças. Com temas divertidos como unicórnios, dinossauros, animais ou qualquer outro tema que você imaginar, cada peça é feita com materiais resistentes e seguros. As mochilas são ideais para a escola, enquanto as lancheiras mantêm o lanche organizado e fresco.
+products.category.backpacks.description=Nossas mochilas e lancheiras infantis s\u00c3\u00a3o perfeitas para o dia a dia das crian\u00c3\u00a7as. Com temas divertidos como unic\u00c3\u00b3rnios, dinossauros, animais ou qualquer outro tema que voc\u00c3\u00aa imaginar, cada pe\u00c3\u00a7a \u00c3\u00a9 feita com materiais resistentes e seguros. As mochilas s\u00c3\u00a3o ideais para a escola, enquanto as lancheiras mant\u00c3\u00aam o lanche organizado e fresco.
 
 # Categoria Bolsas
 products.category.bags.title=Bolsas Personalizadas
@@ -143,7 +143,7 @@ products.category.cases.description=Nossos estojos personalizados s\u00e3o perfe
 
 # Categoria Linha Baby
 products.category.baby.title=Linha Baby
-products.category.baby.description=Nossa linha baby traz produtos delicados e seguros para deixar a vida dos pais mais fácil. Com op\u00e7\u00f5es como toalhas personalizadas, farmacinha, carteira pediátrica e muito mais! Cada item pode ser customizado com o nome do bebê ou tema escolhido pelos pais.
+products.category.baby.description=Nossa linha baby traz produtos delicados e seguros para deixar a vida dos pais mais f\u00c3\u00a1cil. Com op\u00e7\u00f5es como toalhas personalizadas, farmacinha, carteira pedi\u00c3\u00a1trica e muito mais! Cada item pode ser customizado com o nome do beb\u00c3\u00aa ou tema escolhido pelos pais.
 
 # ... (chaves existentes)
 
@@ -194,19 +194,19 @@ category.why.subtitle.suffix=que n\u00e3o apenas organizam, mas contam sua hist\
 
 category.why.feature1.title=Design que Inspira
 category.why.feature1.description.prefix=<strong>Cada
-category.why.feature1.description.middle=é uma obra de arte personalizada.</strong>
-category.why.feature1.description.suffix=Nós trabalhamos com paixão para transformar suas ideias em peças que inspiram sua rotina diária.
+category.why.feature1.description.middle=\u00c3\u00a9 uma obra de arte personalizada.</strong>
+category.why.feature1.description.suffix=N\u00c3\u00b3s trabalhamos com paix\u00c3\u00a3o para transformar suas ideias em pe\u00c3\u00a7as que inspiram sua rotina di\u00c3\u00a1ria.
 
 category.why.feature2.title=Qualidade Premium
 category.why.feature2.description.prefix=<strong>Materiais de primeira linha e acabamento impec\u00e1vel.</strong> Suas
-category.why.feature2.description.suffix=vão resistir ao uso diário mantendo a beleza e funcionalidade por anos.
+category.why.feature2.description.suffix=v\u00c3\u00a3o resistir ao uso di\u00c3\u00a1rio mantendo a beleza e funcionalidade por anos.
 
 category.why.feature3.title=Atendimento que Acolhe
-category.why.feature3.description.prefix=<strong>Você é parte do processo criativo.</strong> Acompanhamos você em cada etapa, garantindo que sua
-category.why.feature3.description.suffix=seja exatamente o que você sonhou.
+category.why.feature3.description.prefix=<strong>Voc\u00c3\u00aa \u00c3\u00a9 parte do processo criativo.</strong> Acompanhamos voc\u00c3\u00aa em cada etapa, garantindo que sua
+category.why.feature3.description.suffix=seja exatamente o que voc\u00c3\u00aa sonhou.
 
 category.why.feature4.title=Feito com Amor
-category.why.feature4.description.prefix=<strong>Cada peça é tratada como se fosse para nossa família.</strong>
+category.why.feature4.description.prefix=<strong>Cada pe\u00c3\u00a7a \u00c3\u00a9 tratada como se fosse para nossa fam\u00c3\u00adlia.</strong>
 category.why.feature4.description.suffix=Cuidamos de todos os detalhes para que voc\u00ea receba algo verdadeiramente especial.
 
 # ... (chaves existentes)
@@ -242,17 +242,17 @@ category.imagination.overlay=\u2728 100% \u00danica
 # Categoria - Se\u00e7\u00e3o Como Funciona
 category.howitworks.badge=Como Funciona
 category.howitworks.title=Do Sonho \u00e0 Realidade em 4 Passos
-category.howitworks.subtitle.prefix=Nosso processo \u00e9 simples e próximo, mas cada etapa \u00e9 cuidadosamente pensada para garantir que sua
-category.howitworks.subtitle.suffix=seja perfeita e única para sua rotina.
+category.howitworks.subtitle.prefix=Nosso processo \u00e9 simples e pr\u00c3\u00b3ximo, mas cada etapa \u00e9 cuidadosamente pensada para garantir que sua
+category.howitworks.subtitle.suffix=seja perfeita e \u00c3\u00banica para sua rotina.
 category.howitworks.step1.title=Conte Sua Hist\u00f3ria
 category.howitworks.step1.description=Compartilhe comigo suas paix\u00f5es, sua rotina, pets, profiss\u00e3o ou qualquer inspira\u00e7\u00e3o que voc\u00ea tenha.
 category.howitworks.step2.title=Criamos o Design
-category.howitworks.step2.description=Nós vamos criar um projeto exclusivo baseado nas suas ideias e personalidade! Voc\u00ea aprova antes da produ\u00e7\u00e3o.
+category.howitworks.step2.description=N\u00c3\u00b3s vamos criar um projeto exclusivo baseado nas suas ideias e personalidade! Voc\u00ea aprova antes da produ\u00e7\u00e3o.
 category.howitworks.step3.title=Produ\u00e7\u00e3o Premium
 category.howitworks.step3.description.prefix=Sua
-category.howitworks.step3.description.suffix=\u00e9 produzida com materiais de alta qualidade e t\u00e9cnicas especiais para garantir durabilidade e beleza. Além de muito amor!
+category.howitworks.step3.description.suffix=\u00e9 produzida com materiais de alta qualidade e t\u00e9cnicas especiais para garantir durabilidade e beleza. Al\u00c3\u00a9m de muito amor!
 category.howitworks.step4.title=Entrega Especial
-category.howitworks.step4.description=Embalamos com carinho e enviamos para voc\u00ea. Seu produto único e personalizado chegará em casa!
+category.howitworks.step4.description=Embalamos com carinho e enviamos para voc\u00ea. Seu produto \u00c3\u00banico e personalizado chegar\u00c3\u00a1 em casa!
 category.howitworks.button.prefix=Come\u00e7ar Minha
 category.howitworks.button.suffix=Agora
 
