--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -31,7 +31,7 @@ index.testimonial1.author=Maria Silva
 index.testimonial1.product=Caneca Personalizada
 index.testimonial1.text=A caneca personalizada que comprei foi perfeita como presente! O acabamento \u00e9 excelente e a entrega foi r\u00e1pida. Com certeza comprarei novamente.
 index.testimonial2.author=Carlos Oliveira
-index.testimonial2.product=Necessaire Bordada
+index.testimonial2.product=Necessaire Estampada
 index.testimonial2.text=Encomendei uma necessaire com o nome da minha esposa estampado e ela amou! O material \u00e9 de \u00f3tima qualidade e o estampado ficou impec\u00e1vel.
 index.testimonial3.author=Ana Souza
 index.testimonial3.product=Mochila Personalizada
@@ -73,7 +73,7 @@ index.testimonial1.author=Maria Silva
 index.testimonial1.product=Caneca Personalizada
 index.testimonial1.text=A caneca personalizada que comprei foi perfeita como presente! O acabamento \u00e9 excelente e a entrega foi r\u00e1pida. Com certeza comprarei novamente.
 index.testimonial2.author=Carlos Oliveira
-index.testimonial2.product=Necessaire Bordada
+index.testimonial2.product=Necessaire Estampada
 index.testimonial2.text=Encomendei uma necessaire com o nome da minha esposa estampado e ela amou! O material \u00e9 de \u00f3tima qualidade e o estampado ficou impec\u00e1vel.
 index.testimonial3.author=Ana Souza
 index.testimonial3.product=Mochila Personalizada
